新增流量控制接口